you can guard now

--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -552,6 +552,7 @@
     <Compile Include="Entities\Controllers\MeleeWeapon\Recovery.cs" />
     <Compile Include="Entities\Controllers\MeleeWeapon\Startup.cs" />
     <Compile Include="Entities\Controllers\Player\Dashing.cs" />
+    <Compile Include="Entities\Controllers\Player\Guarding.cs" />
     <Compile Include="Entities\Controllers\Player\GunMode.cs" />
     <Compile Include="Entities\Controllers\Player\MeleeMode.cs" />
     <Compile Include="Entities\Controllers\TimedState.cs" />
