removed some old effect handling code

--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -503,13 +503,13 @@
     <Compile Include="Components\Interfaces\IEffectsComponent.cs" />
     <Compile Include="Components\Interfaces\IHealthComponent.cs" />
     <Compile Include="Components\Interfaces\IHitstopComponent.cs" />
+    <Compile Include="Components\Interfaces\IHitstunComponent.cs" />
     <Compile Include="Components\Interfaces\IShatterComponent.cs" />
     <Compile Include="Components\Interfaces\IWeaknessComponent.cs" />
     <Compile Include="Components\Interfaces\IWeaponsComponent.cs" />
     <Compile Include="Components\ShatterComponent.cs" />
     <Compile Include="Components\WeaknessComponent.cs" />
     <Compile Include="Components\WeaponsComponent.cs" />
-    <Compile Include="Contracts\IEffect.cs" />
     <Compile Include="Contracts\IEffectBundle.cs" />
     <Compile Include="Contracts\IEffectHandler.cs" />
     <Compile Include="Contracts\IGameplayInputDevice.cs" />
@@ -519,7 +519,6 @@
     <Compile Include="Contracts\IWeaponHolder.cs" />
     <Compile Include="Contracts\IMeleeWeaponInputDevice.cs" />
     <Compile Include="Contracts\INumericalEffect.cs" />
-    <Compile Include="Contracts\IPersistentEffect.cs" />
     <Compile Include="Contracts\IStatModifierCollection.cs" />
     <Compile Include="Contracts\IWeapon.cs" />
     <Compile Include="Contracts\IWeaponCache.cs" />
@@ -543,14 +542,15 @@
     <Compile Include="Effects\Handlers\Base\IEffectHandlerCollection.cs" />
     <Compile Include="Effects\Handlers\DamageHandler.cs" />
     <Compile Include="Effects\Handlers\HitstopHandler.cs" />
+    <Compile Include="Effects\Handlers\HitstunHandler.cs" />
     <Compile Include="Effects\Handlers\KnockbackHandler.cs" />
     <Compile Include="Effects\Handlers\ShatterDamageHandler.cs" />
     <Compile Include="Effects\Handlers\WeaknessDamageHandler.cs" />
     <Compile Include="Effects\HitstopEffect.cs" />
+    <Compile Include="Effects\HitstunEffect.cs" />
     <Compile Include="Effects\KnockbackEffect.cs" />
     <Compile Include="Effects\ShatterDamageEffect.cs" />
     <Compile Include="Effects\SourceTag.cs" />
-    <Compile Include="Effects\StandardEffectHandlers.cs" />
     <Compile Include="Effects\StatModifierCollection.cs" />
     <Compile Include="Effects\Team.cs" />
     <Compile Include="Effects\WeaknessDamageEffect.cs" />
