--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -497,31 +497,10 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\EffectsComponent.cs" />
-    <Compile Include="Components\HealthComponent.cs" />
-    <Compile Include="Components\HitstopComponent.cs" />
-    <Compile Include="Components\Interfaces\IEffectsComponent.cs" />
-    <Compile Include="Components\Interfaces\IHealthComponent.cs" />
-    <Compile Include="Components\Interfaces\IHitstopComponent.cs" />
-    <Compile Include="Components\Interfaces\IHitstunComponent.cs" />
-    <Compile Include="Components\Interfaces\IShatterComponent.cs" />
-    <Compile Include="Components\Interfaces\IWeaknessComponent.cs" />
-    <Compile Include="Components\Interfaces\IWeaponsComponent.cs" />
-    <Compile Include="Components\ShatterComponent.cs" />
-    <Compile Include="Components\WeaknessComponent.cs" />
-    <Compile Include="Components\WeaponsComponent.cs" />
-    <Compile Include="Contracts\IEffectBundle.cs" />
-    <Compile Include="Contracts\IEffectHandler.cs" />
-    <Compile Include="Contracts\IGameplayInputDevice.cs" />
-    <Compile Include="Contracts\IGun.cs" />
-    <Compile Include="Contracts\IGunInputDevice.cs" />
-    <Compile Include="Contracts\IMeleeWeapon.cs" />
-    <Compile Include="Contracts\IWeaponHolder.cs" />
-    <Compile Include="Contracts\IMeleeWeaponInputDevice.cs" />
-    <Compile Include="Contracts\INumericalEffect.cs" />
-    <Compile Include="Contracts\IStatModifierCollection.cs" />
-    <Compile Include="Contracts\IWeapon.cs" />
-    <Compile Include="Contracts\IWeaponCache.cs" />
+    <Compile Include="Components\*.cs" />
+    <Compile Include="Components\*\*.cs" />
+    <Compile Include="Contracts\*.cs" />
+    <Compile Include="Controllers\*.cs" />
     <Compile Include="DataTypes\AttackData.cs" />
     <Compile Include="DataTypes\AttackData.Generated.cs">
       <DependentUpon>AttackData.cs</DependentUpon>
@@ -533,46 +512,11 @@
     <Compile Include="DataTypes\PlatformerValues.Generated.cs" />
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
     <Compile Include="DataTypes\TopDownValues.Generated.cs" />
-    <Compile Include="Effects\ApplyShatterEffect.cs" />
-    <Compile Include="Effects\DamageEffect.cs" />
-    <Compile Include="Effects\DamageOverTimeEffect.cs" />
-    <Compile Include="Effects\Handlers\ApplyShatterDamageHandler.cs" />
-    <Compile Include="Effects\Handlers\Base\EffectHandler.cs" />
-    <Compile Include="Effects\Handlers\Base\EffectHandlerCollection.cs" />
-    <Compile Include="Effects\Handlers\Base\IEffectHandlerCollection.cs" />
-    <Compile Include="Effects\Handlers\DamageHandler.cs" />
-    <Compile Include="Effects\Handlers\HitstopHandler.cs" />
-    <Compile Include="Effects\Handlers\HitstunHandler.cs" />
-    <Compile Include="Effects\Handlers\KnockbackHandler.cs" />
-    <Compile Include="Effects\Handlers\ShatterDamageHandler.cs" />
-    <Compile Include="Effects\Handlers\WeaknessDamageHandler.cs" />
-    <Compile Include="Effects\HitstopEffect.cs" />
-    <Compile Include="Effects\HitstunEffect.cs" />
-    <Compile Include="Effects\KnockbackEffect.cs" />
-    <Compile Include="Effects\ShatterDamageEffect.cs" />
-    <Compile Include="Effects\SourceTag.cs" />
-    <Compile Include="Effects\StatModifierCollection.cs" />
-    <Compile Include="Effects\Team.cs" />
-    <Compile Include="Effects\WeaknessDamageEffect.cs" />
+    <Compile Include="Effects\*.cs" />
     <Compile Include="Entities\Bullet.cs" />
     <Compile Include="Entities\Bullet.Generated.cs">
       <DependentUpon>Bullet.cs</DependentUpon>
     </Compile>
-    <Compile Include="Entities\Controllers\GunEnemy\GunMode.cs" />
-    <Compile Include="Entities\Controllers\Gun\Ready.cs" />
-    <Compile Include="Entities\Controllers\Gun\Recovery.cs" />
-    <Compile Include="Entities\Controllers\Gun\Reloading.cs" />
-    <Compile Include="Entities\Controllers\Gun\SuperRocketReloading.cs" />
-    <Compile Include="Entities\Controllers\MeleeEnemy\MeleeMode.cs" />
-    <Compile Include="Entities\Controllers\MeleeWeapon\Active.cs" />
-    <Compile Include="Entities\Controllers\MeleeWeapon\Idle.cs" />
-    <Compile Include="Entities\Controllers\MeleeWeapon\Recovery.cs" />
-    <Compile Include="Entities\Controllers\MeleeWeapon\Startup.cs" />
-    <Compile Include="Entities\Controllers\Player\Dashing.cs" />
-    <Compile Include="Entities\Controllers\Player\Guarding.cs" />
-    <Compile Include="Entities\Controllers\Player\GunMode.cs" />
-    <Compile Include="Entities\Controllers\Player\MeleeMode.cs" />
-    <Compile Include="Entities\Controllers\TimedState.cs" />
     <Compile Include="Entities\DamageNumber.cs" />
     <Compile Include="Entities\DamageNumber.Generated.cs">
       <DependentUpon>DamageNumber.cs</DependentUpon>
@@ -585,8 +529,14 @@
     <Compile Include="Entities\DefaultGun.Generated.cs">
       <DependentUpon>DefaultGun.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\DefaultRangedEnemy.GunMode.cs">
+      <DependentUpon>DefaultRangedEnemy.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\DefaultMeleeEnemy.cs" />
     <Compile Include="Entities\DefaultMeleeEnemy.Generated.cs">
+      <DependentUpon>DefaultMeleeEnemy.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\DefaultMeleeEnemy.MeleeMode.cs">
       <DependentUpon>DefaultMeleeEnemy.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\DefaultRangedEnemy.cs" />
@@ -605,16 +555,52 @@
     <Compile Include="Entities\Gun.Generated.cs">
       <DependentUpon>Gun.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\Gun.Ready.cs">
+      <DependentUpon>Gun.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Gun.Recovery.cs">
+      <DependentUpon>Gun.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Gun.Reloading.cs">
+      <DependentUpon>Gun.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Gun.SuperRocketReloading.cs">
+      <DependentUpon>Gun.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\MeleeHitbox.cs" />
     <Compile Include="Entities\MeleeHitbox.Generated.cs">
       <DependentUpon>MeleeHitbox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\MeleeWeapon.Active.cs">
+      <DependentUpon>MeleeWeapon.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\MeleeWeapon.cs" />
     <Compile Include="Entities\MeleeWeapon.Generated.cs">
       <DependentUpon>MeleeWeapon.cs</DependentUpon>
     </Compile>
+    <Compile Include="Entities\MeleeWeapon.Idle.cs">
+      <DependentUpon>MeleeWeapon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\MeleeWeapon.Recovery.cs">
+      <DependentUpon>MeleeWeapon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\MeleeWeapon.Startup.cs">
+      <DependentUpon>MeleeWeapon.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Player.cs" />
+    <Compile Include="Entities\Player.Dashing.cs">
+      <DependentUpon>Player.cs</DependentUpon>
+    </Compile>
     <Compile Include="Entities\Player.Generated.cs">
+      <DependentUpon>Player.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Player.Guarding.cs">
+      <DependentUpon>Player.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Player.GunMode.cs">
+      <DependentUpon>Player.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Entities\Player.MeleeMode.cs">
       <DependentUpon>Player.cs</DependentUpon>
     </Compile>
     <Compile Include="Entities\Projectile.cs" />
@@ -953,17 +939,10 @@
     <Compile Include="GumRuntimes\VirtualController\VirtualControllerDisplayRuntime.Generated.cs">
       <DependentUpon>VirtualControllerDisplayRuntime.cs</DependentUpon>
     </Compile>
-    <Compile Include="InputDevices\Constant2DInput.cs" />
-    <Compile Include="InputDevices\EnemyInputDevice.cs" />
-    <Compile Include="InputDevices\EntityTracker.cs" />
-    <Compile Include="InputDevices\GameplayInputDevice.cs" />
-    <Compile Include="InputDevices\GunInputDevice.cs" />
-    <Compile Include="InputDevices\MeleeWeaponInputDevice.cs" />
-    <Compile Include="InputDevices\ScrollWheelPressableInput.cs" />
-    <Compile Include="InputDevices\TruePressableInput.cs" />
-    <Compile Include="InputDevices\VirtualAimer.cs" />
-    <Compile Include="Models\WeaponCache.cs" />
-    <Compile Include="Models\ZeroWeapon.cs" />
+    <Compile Include="Handlers\*.cs" />
+    <Compile Include="Handlers\*\*.cs" />
+    <Compile Include="InputDevices\*.cs" />
+    <Compile Include="Models\*.cs" />
     <Compile Include="Performance\IEntityFactory.Generated.cs" />
     <Compile Include="Performance\PoolList.Generated.cs" />
     <Compile Include="Program.cs" />
