--- a/ProjectLoot/ProjectLoot.csproj
+++ b/ProjectLoot/ProjectLoot.csproj
@@ -497,10 +497,37 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Components\*.cs" />
-    <Compile Include="Components\*\*.cs" />
-    <Compile Include="Contracts\*.cs" />
-    <Compile Include="Controllers\*.cs" />
+    <Compile Include="Components\EffectsComponent.cs" />
+    <Compile Include="Components\GunComponent.cs" />
+    <Compile Include="Components\HealthComponent.cs" />
+    <Compile Include="Components\HitstopComponent.cs" />
+    <Compile Include="Components\HitstunComponent.cs" />
+    <Compile Include="Components\Interfaces\IEffectsComponent.cs" />
+    <Compile Include="Components\Interfaces\IGunComponent.cs" />
+    <Compile Include="Components\Interfaces\IHealthComponent.cs" />
+    <Compile Include="Components\Interfaces\IHitstopComponent.cs" />
+    <Compile Include="Components\Interfaces\IHitstunComponent.cs" />
+    <Compile Include="Components\Interfaces\IMeleeWeaponComponent.cs" />
+    <Compile Include="Components\Interfaces\IShatterComponent.cs" />
+    <Compile Include="Components\Interfaces\ISpriteComponent.cs" />
+    <Compile Include="Components\Interfaces\ITransformComponent.cs" />
+    <Compile Include="Components\Interfaces\IWeaknessComponent.cs" />
+    <Compile Include="Components\MeleeWeaponComponent.cs" />
+    <Compile Include="Components\ShatterComponent.cs" />
+    <Compile Include="Components\SpriteComponent.cs" />
+    <Compile Include="Components\TransformComponent.cs" />
+    <Compile Include="Components\WeaknessComponent.cs" />
+    <Compile Include="Contracts\IEffectBundle.cs" />
+    <Compile Include="Contracts\IEffectHandler.cs" />
+    <Compile Include="Contracts\IGun.cs" />
+    <Compile Include="Contracts\IMeleeWeapon.cs" />
+    <Compile Include="Contracts\INumericalEffect.cs" />
+    <Compile Include="Contracts\IStatModifierCollection.cs" />
+    <Compile Include="Contracts\IUpdateable.cs" />
+    <Compile Include="Contracts\IWeapon.cs" />
+    <Compile Include="Contracts\IWeaponCache.cs" />
+    <Compile Include="Contracts\IWeaponHolder.cs" />
+    <Compile Include="Controllers\ParentedTimedState.cs" />
     <Compile Include="DataTypes\AttackData.cs" />
     <Compile Include="DataTypes\AttackData.Generated.cs">
       <DependentUpon>AttackData.cs</DependentUpon>
@@ -512,7 +539,16 @@
     <Compile Include="DataTypes\PlatformerValues.Generated.cs" />
     <Compile Include="DataTypes\TileMapInfo.Generated.cs" />
     <Compile Include="DataTypes\TopDownValues.Generated.cs" />
-    <Compile Include="Effects\*.cs" />
+    <Compile Include="Effects\ApplyShatterEffect.cs" />
+    <Compile Include="Effects\DamageEffect.cs" />
+    <Compile Include="Effects\HitstopEffect.cs" />
+    <Compile Include="Effects\HitstunEffect.cs" />
+    <Compile Include="Effects\KnockbackEffect.cs" />
+    <Compile Include="Effects\ShatterDamageEffect.cs" />
+    <Compile Include="Effects\SourceTag.cs" />
+    <Compile Include="Effects\StatModifierCollection.cs" />
+    <Compile Include="Effects\Team.cs" />
+    <Compile Include="Effects\WeaknessDamageEffect.cs" />
     <Compile Include="Entities\Bullet.cs" />
     <Compile Include="Entities\Bullet.Generated.cs">
       <DependentUpon>Bullet.cs</DependentUpon>
@@ -939,10 +975,31 @@
     <Compile Include="GumRuntimes\VirtualController\VirtualControllerDisplayRuntime.Generated.cs">
       <DependentUpon>VirtualControllerDisplayRuntime.cs</DependentUpon>
     </Compile>
-    <Compile Include="Handlers\*.cs" />
-    <Compile Include="Handlers\*\*.cs" />
-    <Compile Include="InputDevices\*.cs" />
-    <Compile Include="Models\*.cs" />
+    <Compile Include="Handlers\ApplyShatterDamageHandler.cs" />
+    <Compile Include="Handlers\Base\EffectHandler.cs" />
+    <Compile Include="Handlers\Base\EffectHandlerCollection.cs" />
+    <Compile Include="Handlers\Base\IEffectHandlerCollection.cs" />
+    <Compile Include="Handlers\DamageHandler.cs" />
+    <Compile Include="Handlers\GunHandler.cs" />
+    <Compile Include="Handlers\HitstopHandler.cs" />
+    <Compile Include="Handlers\HitstunHandler.cs" />
+    <Compile Include="Handlers\KnockbackHandler.cs" />
+    <Compile Include="Handlers\MeleeWeaponHandler.cs" />
+    <Compile Include="Handlers\ShatterDamageHandler.cs" />
+    <Compile Include="Handlers\WeaknessDamageHandler.cs" />
+    <Compile Include="InputDevices\Constant2DInput.cs" />
+    <Compile Include="InputDevices\EnemyInputDevice.cs" />
+    <Compile Include="InputDevices\EntityTracker.cs" />
+    <Compile Include="InputDevices\GameplayInputDevice.cs" />
+    <Compile Include="InputDevices\GunInputDevice.cs" />
+    <Compile Include="InputDevices\IGameplayInputDevice.cs" />
+    <Compile Include="InputDevices\IGunInputDevice.cs" />
+    <Compile Include="InputDevices\IMeleeWeaponInputDevice.cs" />
+    <Compile Include="InputDevices\MeleeWeaponInputDevice.cs" />
+    <Compile Include="InputDevices\ScrollWheelPressableInput.cs" />
+    <Compile Include="InputDevices\TruePressableInput.cs" />
+    <Compile Include="InputDevices\VirtualAimer.cs" />
+    <Compile Include="Models\WeaponCache.cs" />
     <Compile Include="Performance\IEntityFactory.Generated.cs" />
     <Compile Include="Performance\PoolList.Generated.cs" />
     <Compile Include="Program.cs" />
